--- a/package.json
+++ b/package.json
@@ -1,15 +1,31 @@
 {
-  "name": "typed-store-2025",
+  "name": "new",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build",
+    "build": "tsc -b && vite build",
+    "lint": "eslint .",
     "preview": "vite preview"
   },
+  "dependencies": {
+    "feather-icons-react": "^0.7.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
+  },
   "devDependencies": {
+    "@eslint/js": "^9.17.0",
+    "@types/react": "^18.3.18",
+    "@types/react-dom": "^18.3.5",
+    "@vitejs/plugin-react-swc": "^3.5.0",
+    "eslint": "^9.17.0",
+    "eslint-plugin-react-hooks": "^5.0.0",
+    "eslint-plugin-react-refresh": "^0.4.16",
+    "globals": "^15.14.0",
+    "prop-types": "^15.8.1",
     "typescript": "~5.6.2",
+    "typescript-eslint": "^8.18.2",
     "vite": "^6.0.5"
   }
 }
