--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
+    "@faker-js/faker": "^9.3.0",
     "@types/lodash": "^4.17.13",
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
