--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "feather-icons-react": "^0.7.0",
     "lodash": "^4.17.21",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "usehooks-ts": "^3.1.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
